--- a/src/Modal/modal.css
+++ b/src/Modal/modal.css
@@ -18,7 +18,7 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 350px;
+  width: 320px;
   height: 350px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   animation-name: animatetop;
@@ -100,6 +100,6 @@ h4 {
   width: 100%;
 }
 .des1 {
-  margin-left: 40px;
-  min-width: 200px;
+  margin-left: 20px;
+  width: 50%;
 }
