--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,29 @@
 .App{
   background-color: rgb(243, 242, 237);
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
 }
+.wrapper{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 h1{
-  font-size:50px;
+  font-size:35px;
   color: black;
   font-weight: bolder;
   font-family: 'Roboto', sans-serif;
 }
 
 .heading{
-  margin-top: 200px;
+  margin-top: 50px;
 }
 .search {
-  width:470px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  width: 100%;
+  max-width:400px;
 }
