--- a/src/List/list.css
+++ b/src/List/list.css
@@ -1,12 +1,13 @@
 h3 {
   padding-top: 5px;
-  font-size: 15px;
+  font-size: 13px;
 }
 .listings {
   margin-top: 10px;
- overflow: scroll;
-  width: 470px;
-  max-height: 300px;
+  overflow: scroll;
+  width: 100%;
+  max-width: 400px;
+  max-height: 400px;
 }
 .image {
   width: 30px;
@@ -17,8 +18,8 @@ h3 {
 .info {
   display: flex;
   align-items: center;
-  min-width: 260px;
-  margin-right: 50px;
+  width: 170px;
+  margin-right: 10px;
 }
 .list {
   height: 60px;
@@ -36,5 +37,8 @@ h3 {
   border-radius: 100px;
   background-color: red;
   margin-right: 5px;
-  margin-top: -5px;
+}
+.info2 {
+  display: flex;
+  align-items: center;
 }
